sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (k=0) {k=k+1}
                     ^